--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,9 +103,9 @@ jobs:
     strategy:
       matrix:
         host:
-          - { os: macos-latest, displayName: "macOS" }
-          - { os: ubuntu-22.04, displayName: "Linux" }
-          - { os: windows-2022, displayName: "Windows" }
+          - { os: macos-latest, displayName: "macOS", classifier: "osxuniversal" }
+          - { os: ubuntu-22.04, displayName: "Linux", classifier: "linuxx86-64" }
+          - { os: windows-2022, displayName: "Windows", classifier: "windowsx86-64" }
 
     name: Build for ${{ matrix.host.displayName }}
     runs-on: ${{ matrix.host.os }}
@@ -129,15 +129,24 @@ jobs:
         uses: battila7/get-version-action@v2
 
       # Upload conduit build
+      - name: 'Release: Install Dependencies'
+        if: github.event_name == 'release'
+        run: pip3 install requests
+      - name: 'Release: Build "conduit/wpilibio:nativezip" for macOS'
+        if: github.event_name == 'release' && matrix.host.displayName == 'macOS'
+        run: bazelisk build //conduit/wpilibio/osxuniversal:nativezip
+        env:
+          GITHUB_ACTOR: camearle20
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Release: Upload "conduit/wpilibio:nativezip" for macOS'
         if: github.event_name == 'release' && matrix.host.displayName == 'macOS'
-        run: bazelisk run --define "maven_repo=https://maven.pkg.github.com/camearle20/AdvantageKit" --define "publishing_version=${{ steps.get_version.outputs.version-without-v }}" //conduit/wpilibio/osxuniversal:nativezip.publish
+        run: python3 build_tools/repo/publish_zip.py --url https://maven.pkg.github.com/camearle20/AdvantageKit --group_id org.littletonrobotics.akit.conduit --artifact_id conduit-wpilibio --version ${{ steps.get_version.outputs.version-without-v }} --classifier ${{ matrix.host.classifier }} --file_path bazel-bin/conduit/wpilibio/osxuniversal/wpilibio-${{ steps.get_version.outputs.version-without-v }}-${{ matrix.host.classifier }}.zip --username camearle20 --access_token ${{ secrets.GITHUB_TOKEN }}
+      - name: 'Release: Build "conduit/wpilibio:nativezip"'
+        if: github.event_name == 'release' && matrix.host.displayName != 'macOS'
+        run: bazelisk build //conduit/wpilibio:nativezip
         env:
           GITHUB_ACTOR: camearle20
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Release: Upload "conduit/wpilibio:nativezip"'
         if: github.event_name == 'release' && matrix.host.displayName != 'macOS'
-        run: bazelisk run --define "maven_repo=https://maven.pkg.github.com/camearle20/AdvantageKit" --define "publishing_version=${{ steps.get_version.outputs.version-without-v }}" //conduit/wpilibio:nativezip.publish
-        env:
-          GITHUB_ACTOR: camearle20
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python3 build_tools/repo/publish_zip.py --url https://maven.pkg.github.com/camearle20/AdvantageKit --group_id org.littletonrobotics.akit.conduit --artifact_id conduit-wpilibio --version ${{ steps.get_version.outputs.version-without-v }} --classifier ${{ matrix.host.classifier }} --file_path bazel-bin/conduit/wpilibio/wpilibio-${{ steps.get_version.outputs.version-without-v }}-${{ matrix.host.classifier }}.zip --username camearle20 --access_token ${{ secrets.GITHUB_TOKEN }}
