--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,12 +72,15 @@ jobs:
           asset_content_type: application/zip
 
       # Upload conduit build
+      - name: 'Release: Install Dependencies'
+        if: github.event_name == 'release'
+        run: pip3 install requests
+      - name: 'Release: Build "conduit/wpilibio:nativezip"'
+        if: github.event_name == 'release'
+        run: bazelisk run --config=athena --define "publishing_version=${{ steps.get_version.outputs.version-without-v }}" //conduit/wpilibio:nativezip
       - name: 'Release: Upload "conduit/wpilibio:nativezip"'
         if: github.event_name == 'release'
-        run: bazelisk run --config=athena --define "maven_repo=https://maven.pkg.github.com/camearle20/AdvantageKit" --define "publishing_version=${{ steps.get_version.outputs.version-without-v }}" //conduit/wpilibio:nativezip.publish
-        env:
-          GITHUB_ACTOR: camearle20
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python3 build_tools/repo/publish_zip.py --url https://maven.pkg.github.com/camearle20/AdvantageKit --group_id org.littletonrobotics.akit.conduit --artifact_id conduit-wpilibio --version ${{ steps.get_version.outputs.version-without-v }} --classifier linuxathena --file_path bazel-bin/conduit/wpilibio/wpilibio-${{ steps.get_version.outputs.version-without-v }}-linuxathena.zip --username camearle20 --access_token ${{ secrets.GITHUB_TOKEN }}
       - name: 'Release: Upload "conduit/wpilibio:pom"'
         if: github.event_name == 'release'
         run: bazelisk run --config=athena --define "maven_repo=https://maven.pkg.github.com/camearle20/AdvantageKit" --define "publishing_version=${{ steps.get_version.outputs.version-without-v }}" //conduit/wpilibio:pom.publish
